# rap_obsidian_utils

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/rap_obsidian_utils/: __init__.py  cli.py  sync.py
